--- a/index.html
+++ b/index.html
@@ -87,15 +87,7 @@
                                 </div>
                                 <div class="tab-pane fade " id="experiencia-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
 
-                                    <ul class="timeline">
-                                        <li>
-                                            <h3>Secretaria docente</h3><span>01 Enero 2020 al presente</span>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
-                                        </li>
-                                        <li>
-                                            <h3>Administrativa</h3><span>01 Enero 2010 - 01 Enero 2020</span>
-                                            <p>Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
-                                        </li>
+                                    <ul class="timeline" id="container-exp">
                                     </ul>
                                 </div>
                                 <div class="tab-pane fade" id="habilidades-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">Habilidades</div>
