--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@
                                     <ul class="timeline" id="container-exp">
                                     </ul>
                                 </div>
-                                <div class="tab-pane fade" id="habilidades-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">Habilidades</div>
+                                <div class="tab-pane fade" id="habilidades-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                                    <div class=" h-100">
+                                        <div class="card-body mt-3" id="container-hab">
+
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
